package google.protobuf;

option java_package = "com.google.protobuf";
option java_outer_classname = "DescriptorProtos";
option optimize_for = SPEED;

message FileDescriptorSet
{
    repeated .google.protobuf.FileDescriptorProto file = 1;
}

message FileDescriptorProto
{
    optional string name = 1;
    optional string package = 2;
    repeated string dependency = 3;
    repeated .google.protobuf.DescriptorProto message_type = 4;
    repeated .google.protobuf.EnumDescriptorProto enum_type = 5;
    repeated .google.protobuf.ServiceDescriptorProto service = 6;
    repeated .google.protobuf.FieldDescriptorProto extension = 7;
    optional .google.protobuf.FileOptions options = 8;
}

message DescriptorProto
{
    message ExtensionRange
    {
        optional int32 start = 1;
        optional int32 end = 2;
    }

    optional string name = 1;
    repeated .google.protobuf.FieldDescriptorProto field = 2;
    repeated .google.protobuf.FieldDescriptorProto extension = 6;
    repeated .google.protobuf.DescriptorProto nested_type = 3;
    repeated .google.protobuf.EnumDescriptorProto enum_type = 4;
    repeated .google.protobuf.DescriptorProto.ExtensionRange extension_range = 5;
    optional .google.protobuf.MessageOptions options = 7;
}

message FieldDescriptorProto
{
    enum Type
    {
        TYPE_DOUBLE = 1;
        TYPE_FLOAT = 2;
        TYPE_INT64 = 3;
        TYPE_UINT64 = 4;
        TYPE_INT32 = 5;
        TYPE_FIXED64 = 6;
        TYPE_FIXED32 = 7;
        TYPE_BOOL = 8;
        TYPE_STRING = 9;
        TYPE_GROUP = 10;
        TYPE_MESSAGE = 11;
        TYPE_BYTES = 12;
        TYPE_UINT32 = 13;
        TYPE_ENUM = 14;
        TYPE_SFIXED32 = 15;
        TYPE_SFIXED64 = 16;
        TYPE_SINT32 = 17;
        TYPE_SINT64 = 18;
    }

    enum Label
    {
        LABEL_OPTIONAL = 1;
        LABEL_REQUIRED = 2;
        LABEL_REPEATED = 3;
    }

    optional string name = 1;
    optional int32 number = 3;
    optional .google.protobuf.FieldDescriptorProto.Label label = 4;
    optional .google.protobuf.FieldDescriptorProto.Type type = 5;
    optional string type_name = 6;
    optional string extendee = 2;
    optional string default_value = 7;
    optional .google.protobuf.FieldOptions options = 8;
}

message EnumDescriptorProto
{
    optional string name = 1;
    repeated .google.protobuf.EnumValueDescriptorProto value = 2;
    optional .google.protobuf.EnumOptions options = 3;
}

message EnumValueDescriptorProto
{
    optional string name = 1;
    optional int32 number = 2;
    optional .google.protobuf.EnumValueOptions options = 3;
}

message ServiceDescriptorProto
{
    optional string name = 1;
    repeated .google.protobuf.MethodDescriptorProto method = 2;
    optional .google.protobuf.ServiceOptions options = 3;
}

message MethodDescriptorProto
{
    optional string name = 1;
    optional string input_type = 2;
    optional string output_type = 3;
    optional .google.protobuf.MethodOptions options = 4;
}

message FileOptions
{
    enum OptimizeMode
    {
        SPEED = 1;
        CODE_SIZE = 2;
        LITE_RUNTIME = 3;
    }

    optional string java_package = 1;
    optional string java_outer_classname = 8;
    optional bool java_multiple_files = 10 [default = false];
    optional .google.protobuf.FileOptions.OptimizeMode optimize_for = 9 [default = SPEED];
    optional bool cc_generic_services = 16 [default = true];
    optional bool java_generic_services = 17 [default = true];
    optional bool py_generic_services = 18 [default = true];
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message MessageOptions
{
    optional bool message_set_wire_format = 1 [default = false];
    optional bool no_standard_descriptor_accessor = 2 [default = false];
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message FieldOptions
{
    enum CType
    {
        STRING = 0;
        CORD = 1;
        STRING_PIECE = 2;
    }

    optional .google.protobuf.FieldOptions.CType ctype = 1 [default = STRING];
    optional bool packed = 2;
    optional bool deprecated = 3 [default = false];
    optional string experimental_map_key = 9;
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message EnumOptions
{
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message EnumValueOptions
{
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message ServiceOptions
{
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message MethodOptions
{
    repeated .google.protobuf.UninterpretedOption uninterpreted_option = 999;
    extensions 1000 to max;
}

message UninterpretedOption
{
    message NamePart
    {
        required string name_part = 1;
        required bool is_extension = 2;
    }

    repeated .google.protobuf.UninterpretedOption.NamePart name = 2;
    optional string identifier_value = 3;
    optional uint64 positive_int_value = 4;
    optional int64 negative_int_value = 5;
    optional double double_value = 6;
    optional bytes string_value = 7;
}

